# any-agent

./: .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: close-stale.yaml  docs.yaml  lint.yaml  pre-commit-update.yaml  publish_demo_to_hf_spaces.yaml  release.yaml  tests-cookbook.yaml  tests-docs.yaml  tests-integration.yaml  tests-intergration.yaml  tests-unit.yaml  tests.yaml
agents/: index.html
agents/callbacks/: index.html
agents/frameworks/agno/: index.html
agents/frameworks/google_adk/: index.html
agents/frameworks/langchain/: index.html
agents/frameworks/llama_index/: index.html
agents/frameworks/openai/: index.html
agents/frameworks/smolagents/: index.html
agents/frameworks/tinyagent/: index.html
agents/tools/: index.html
api/agent/: index.html
api/callbacks/: index.html
api/config/: index.html
api/evaluation/: index.html
api/logging/: index.html
api/serving/: index.html
api/tools/: index.html
api/tracing/: index.html
assets/: custom.css
cookbook/a2a_as_tool/: index.html
cookbook/agent_with_local_llm/: index.html
cookbook/callbacks/: index.html
cookbook/mcp_agent/: index.html
cookbook/serve_a2a/: index.html
cookbook/your_first_agent/: index.html
cookbook/your_first_agent_evaluation/: index.html
demo/: Dockerfile  README.md  app.py  config.py  constants.py  requirements.txt  restart_space.py
demo/components/: agent_status.py  inputs.py  sidebar.py
demo/services/: agent.py
demo/tools/: __init__.py  openmeteo.py  openstreetmap.py
docs/: agents.md  api.md  evaluation.md  frameworks.md  index.md  instructions.md  logging.md  serving.md  tools.md  tracing.md
docs/agents/: callbacks.md  index.md  tools.md
docs/agents/frameworks/: agno.md  google_adk.md  langchain.md  llama_index.md  openai.md  smolagents.md  tinyagent.md
docs/api/: agent.md  callbacks.md  config.md  evaluation.md  logging.md  serving.md  tools.md  tracing.md
docs/assets/: custom.css  custom.js
docs/cookbook/: a2a_as_tool.ipynb  agent_with_local_llm.ipynb  callbacks.ipynb  mcp_agent.ipynb  otel_integration.ipynb  serve_a2a.ipynb  your_first_agent.ipynb  your_first_agent_evaluation.ipynb
docs/examples/: evaluation_case.yaml
docs/frameworks/: agno.md  google_adk.md  llama_index.md  openai.md  smolagents.md  tinyagent.md
evaluation/: index.html
scripts/: hooks.py  run-mypy.sh  wake_up_hf_endpoint.py
search/: search_index.json
serving/: index.html
src/any_agent/: __init__.py  config.py  logging.py  schema.py  tracing.py
src/any_agent/agents/: __init__.py  any_agent.py  langchain.py  langchain_agent.py  llama_index.py  openai.py  openai_agent.py  smolagents.py  smolagents_agent.py
src/any_agent/callbacks/: __init__.py  base.py  context.py  span_cost.py  span_end.py  span_print.py
src/any_agent/evaluation/: __init__.py  agent.py  agent_judge.py  cli.py  evaluate.py  evaluation_case.py  evaluation_runner.py  evaluators.py  llm_judge.py  logging.py  results_saver.py  schemas.py  test_case.py  tools.py
src/any_agent/frameworks/: __init__.py  agno.py  any_agent.py  deepagents.py  google.py  langchain.py  llama_index.py  openai.py  smolagents.py  tinyagent.py
src/any_agent/instructions/: imports.py
src/any_agent/loaders/: __init__.py  langchain.py  openai.py  smolagents.py
src/any_agent/runners/: __init__.py  langchain.py  openai.py  smolagents.py
src/any_agent/serving/: __init__.py  agent_card.py  agent_executor.py  config.py  envelope.py  server.py  server_a2a.py  server_handle.py  server_mcp.py  task_manager.py
src/any_agent/telemetry/: __init__.py  base.py  cost.py  langchain_telemetry.py  llama_index_telemetry.py  openai_telemetry.py  smolagents_telemetry.py  telemetry.py
src/any_agent/testing/: helpers.py
src/any_agent/tools/: __init__.py  a2a.py  a2a_tool.py  composio.py  final_output.py  mcp.py  user_interaction.py  web_browsing.py  wrappers.py
src/any_agent/tracing/: __init__.py  agent_trace.py  attributes.py  exporter.py  otel_types.py  trace.py  trace_provider.py
src/any_agent/utils/: __init__.py  asyncio_sync.py  cast.py
tests/: conftest.py
tests/assets/: AGNO_trace.html  AGNO_trace.json  GOOGLE_trace.html  GOOGLE_trace.json  LANGCHAIN_trace.html  LANGCHAIN_trace.json  LLAMA_INDEX_trace.html  LLAMA_INDEX_trace.json  OPENAI_trace.html  OPENAI_trace.json  SMOLAGENTS_trace.html  SMOLAGENTS_trace.json  TINYAGENT_trace.html  TINYAGENT_trace.json
tests/cookbooks/: test_cookbooks.py
tests/docs/: test_all.py
tests/integration/: conftest.py  helpers.py  test_agent.py  test_error_handling.py  test_evaluation.py  test_import_and_wrap_tools.py  test_load_and_run_agent.py  test_load_and_run_agent_twice.py  test_load_and_run_multi_agent.py  test_load_and_run_multi_agent_a2a_tool.py  test_load_and_run_multi_agent_mcp_tool.py  test_mcp.py  test_multiturn.py  test_no_instrument.py  test_serve_agent.py  test_structured_outputs.py  test_task_management.py  test_telemetry_tracing.py  test_thread_safe.py  test_uninstrument.py  test_wrap_tools.py
tests/integration/a2a/: conftest.py  test_a2a_serve.py  test_a2a_tool.py  test_a2a_tool_multiturn.py  test_push_notification.py
tests/integration/frameworks/: test_agent.py  test_error_handling.py  test_thread_safe.py
tests/integration/mcp/: test_mcp_serve.py  test_mcp_streamable_http.py
tests/integration/tools/: test_composio.py  test_tavily_search.py  test_wrap_tools.py
tests/integration/tracing/: test_no_instrument.py
tests/snapshots/: test_trace.py
tests/snapshots/__snapshots__/: test_trace.ambr
tests/unit/: conftest.py  helpers.py  test_unit_instructions.py  test_unit_telemetry.py  test_unit_tracing.py
tests/unit/agents/: test_langchain.py  test_langchain_agent.py  test_llama_index.py  test_openai.py  test_openai_agent.py  test_smolagents.py  test_smolagents_agent.py
tests/unit/callbacks/: test_callbacks.py  test_span_cost.py  (+1 more)
tracing/: index.html
(+131 files in other folders)
